avoid scrollbars for dvh100

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -68,6 +68,7 @@ body {
 }
 .dvh100 {
   height: var(--100dvh);
+  box-sizing: border-box;
 }
 a {
   color: var(--fg);
